updated colour theme

--- a/bootswatch/_variables.scss
+++ b/bootswatch/_variables.scss
@@ -1,7 +1,7 @@
 // Simplex 5.3.8
 // Bootswatch
 
-$theme: "simplex" !default;
+$theme: "ukreat" !default;
 
 //
 // Color system
@@ -30,8 +30,8 @@ $green:   #469408 !default;
 $teal:    #20c997 !default;
 $cyan:    #029acf !default;
 
-$primary:       $red !default;
-$secondary:     $white !default;
+$primary:       #2c6633 !default;
+$secondary:     #D6E1E6 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $orange !default;
