--- a/styles/bootswatch/_variables.scss
+++ b/styles/bootswatch/_variables.scss
@@ -43,7 +43,7 @@ $min-contrast-ratio:   2.8 !default;
 
 // Body
 
-$body-bg:                   #fcfcfc !default;
+$body-bg:                   $secondary !default;
 
 // Fonts
 
